# StudentController

./: .gitignore  CMakeLists.txt  README.md
database/: student.db
includes/: buffer.h  console.h  convert.h  database.h  debug.h  error.h  hashtable.h  mem.h  public.h  student.h
src/: loader.h  main.c
src/libs/: buffer.c  console.c  convert.c  database.c  debug.c  error.c  hashtable.c  mem.c  student.c
src/platform/: header.h  index.c
src/platform/encoder/: encoder.c  encoder.h  readme.txt
src/platform/networker/: http.c  http.h  httper.c  httper.h  worker.c  worker.h
